# pygments

./: .coveragerc  .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .hgignore  AUTHORS  BddTest.feature  CHANGES  Contributing.md  DEADJOE  FOUNTAIN_LEXER_PLAN.md  MANIFEST.in  Makefile  Procfile  README.rst  ReadmeTeam14.md  TODO  bitbucket-pipelines.yml  description.rst  examplec.html  exampleflex.html  ez_setup.py  highlighted_code.html  highlighter.py  how  pygmentize  pyproject.toml  pytest.ini  readme7.md  requirements.txt  setup.cfg  setup.py  test.c  test.html  test_nsis_lexer.py  tox.ini  two_dimensional_truss.ans
.github/workflows/: build.yaml  deploy-gh-pages.yaml  docs.yaml  pip-audit.yml  publish.yaml
codesnippets/: 1729.cpp  2671.js  2671.ts
doc/: Makefile  conf.py  download.rst  faq.rst  index.rst  languages.rst  pygmentize.1  styles.rst
doc/_pyodide/: Dockerfile
doc/_static/: demo-worker.js  demo.css  demo.js
doc/_templates/: demo.html  demo_sidebar.html  docssidebar.html  indexsidebar.html  languages.html  styles.html
doc/docs/: api.rst  cmdline.rst  contributing.rst  filterdevelopment.rst  filters.rst  formatters.rst  index.rst  integrate.rst  java.rst  lexerdevelopment.rst  lexers.rst  moinmoin.rst  plugins.rst  quickstart.rst  rstdirective.rst  security.rst  styledevelopment.rst  styles.rst  terminal-sessions.rst  terminaltips.rst  tokens.rst  unicode.rst
doc/examples/: example.py
doc/pyodide/: Dockerfile  Dockerfile.base  meta.yaml
docs/: generate.py  pygmentize.1  pygments.1
docs/src/: api.txt  cmdline.txt  filterdevelopment.txt  filters.txt  formatterdev.txt  formatters.txt  index.txt  installation.txt  integrate.txt  java.txt  lexerdevelopment.txt  lexers.txt  moinmoin.txt  plugins.txt  pygtk.txt  quickstart.txt  rstdirective.txt  styles.txt  tokens.txt  unicode.txt
json5-test/: how-to-test  json5.py  test.json5
json5-tests/: json5.py  jsonnet.py  test.json5  test0.json5  test0.jsonnet
p6-scripts/: check-files  check-for-regressions.pl  setup.sh  update-last-versions.pl
pygments/: __init__.py  __main__.py  _shtab.py  check.py  cmdline.py  console.py  filter.py  formatter.py  highlighted_code.html  lexer.py  modeline.py  plugin.py  regexopt.py  scanner.py  sphinxext.py  style.py  test_custom_yaml.py  token.py  token_kappa.py  unistring.py  util.py  vyper.py
pygments/filters/: __init__.py
pygments/formatters/: __init__.py  _mapping.py  bbcode.py  groff.py  html.py  img.py  irc.py  latex.py  other.py  pangomarkup.py  rtf.py  svg.py  terminal.py  terminal256.py  wx_richtext.py
pygments/lexers/: BDD.py  __init__.py  _asy_builtins.py  _asybuiltins.py  _cl_builtins.py  _clbuiltins.py  _cocoa_builtins.py  _cocoabuiltins.py  _csound_builtins.py  _dax_builtins.py  _gleam_builtins.py  _googlesql_builtins.py  _julia_builtins.py  _kakoune_builtins.py  _lasso_builtins.py  _lassobuiltins.py  _lilypond_builtins.py  _lua_builtins.py  _luabuiltins.py  _luajit_builtins.py  _luau_builtins.py  _mapping.py  _mapping.py.rej  _mql_builtins.py  _mysql_builtins.py  _openedge_builtins.py  _openedgebuiltins.py  _php_builtins.py  _phpbuiltins.py  _postgres_builtins.py  _qlik_builtins.py  _robotframeworklexer.py  _scilab_builtins.py  _sourcemod_builtins.py  _sourcemodbuiltins.py  _stan_builtins.py  _stata_builtins.py  _tsql_builtins.py  _usd_builtins.py  _vbscript_builtins.py  (+336 more)
pygments/styles/: __init__.py  _mapping.py  abap.py  abap_eclipse.py  algol.py  algol_nu.py  arduino.py  autumn.py  borland.py  bw.py  cds.py  coffee.py  colorful.py  default.py  dracula.py  emacs.py  emacs_dark.py  everforest.py  friendly.py  friendly_grayscale.py  fruity.py  gh-dark.py  gh_dark.py  gruvbox.py  igor.py  inkpot.py  kappa_styles.py  lightbulb.py  lilypond.py  lovelace.py  manni.py  material.py  monokai.py  murphy.py  native.py  night_owl.py  no_clown_fiesta.py  nord.py  onedark.py  onedark_vivid.py  (+22 more)
scripts/: check_crlf.py  check_repeated_token.py  check_sources.py  check_whitespace_token.py  count_loc.py  count_token_references.py  debug_lexer.py  detect_missing_analyse_text.py  find_abandoned_lexers.py  find_codetags.py  find_error.py  fix_epydoc_markup.py  gen_mapfiles.py  get_css_properties.py  get_vimkw.py  pylintrc  release-checklist  update_contrasts.py  utility.py  vim2pygments.py
tests/: __init__.py  conftest.py  old_run.py  run.py  string_asserts.py  support.py  test_analyze_lexer.py  test_apache_conf.py  test_asm.py  test_basic.py  test_basic_api.py  test_bibtex.py  test_bicep.py  test_cfm.py  test_clexer.py  test_cmdline.py  test_coconut.py  test_coffeescript.py  test_coq.py  test_cpp.py  test_crystal.py  test_csound.py  test_cue.py  test_data.py  test_devicetree_lexer.py  test_djangojavascript_lexer.py  test_dotnet_csharp_lexer.py  test_ecl.py  test_examplefiles.py  test_ezhil.py  test_func.py  test_gdscript.py  test_grammar_notation.py  test_graphql.py  test_groff_formatter.py  test_guess.py  test_haskell.py  test_hdl.py  test_html_formatter.py  test_html_formatter_linenos_elements.py  (+69 more)
tests/contrast/: min_contrasts.json  test_contrasts.py
tests/examplefiles/: 99_bottles_of_beer.chpl  ANTLRv4Lexer.g4  ANTLRv4Parser.g4  Basics.elm  Charmci.ci  Grammar.pm  LexBasic.g4  MIME_example.eml  Optimizer.pm6  RegexMatcher.ns2  Singularity  StdGeneric.icl  TiddlyWiki5.tid  abnf_example1.abnf  abnf_example2.abnf  abnf_example3.abnf  abnf_example4.abnf  abnf_example5.abnf  apacheconf_httpd.conf  batchfile.bat  bicep.bicep  blazor.razor  boot-9.scm  capdl_example.cdl  classes.dylan  condensed_ruby.rb  conftest.py  demo.cfm  demo.frt  eg_example1.eg  example.acx  example.adls  example.bat  example.bc  example.boa  example.bug  example.c  example.cddl  example.coffee  example.cpp  (+139 more)
tests/examplefiles/meson/: meson.build  meson.build.output
tests/html_linenos_expected_output/: inline_cls_step_1_start_1_special_0_anchor.html  inline_cls_step_1_start_1_special_0_anchor_filename.html  inline_cls_step_1_start_1_special_0_anchor_nofilename.html  inline_cls_step_1_start_1_special_0_noanchor.html  inline_cls_step_1_start_1_special_0_noanchor_filename.html  (+186 more)
(+3231 files in other folders)
