[build-system]
# setuptools added pyproject.toml support in v61.0.0
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "Pygments"
dynamic = ["version"]
requires-python = ">=3.7"
license = {text = "BSD-2-Clause"}
authors = [
  {name = "Georg Brandl", email = "georg@python.org"}
]
maintainers = [
  {name = "Georg Brandl", email = "georg@python.org"},
  {name = "Matthäus G. Chajdas"},
  {name = "Jean Abou Samra", email = "jean@abou-samra.fr"},
]
description = "Pygments is a syntax highlighting package written in Python."
# For PyPI, use a shorter description than README.rst.
readme = {file = "description.rst", content-type = "text/x-rst"}
keywords = ["syntax highlighting"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
]

[project.optional-dependencies]
plugins = ["importlib-metadata;python_version<'3.8'"]

[project.urls]
Homepage = "https://pygments.org"
Documentation = "https://pygments.org/docs"
Source = "https://github.com/pygments/pygments"
"Bug Tracker" = "https://github.com/pygments/pygments/issues"
Changelog = "https://github.com/pygments/pygments/blob/master/CHANGES"

[project.scripts]
pygmentize = "pygments.cmdline:main"

[tool.setuptools.dynamic]
version = {attr = "pygments.__version__" }

[tool.setuptools.packages.find]
include = ["pygments", "pygments.*"]
