[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Pygments"
dynamic = ["version"]
requires-python = ">=3.7"
license = {text = "BSD-2-Clause"}
authors = [
  {name = "Georg Brandl", email = "georg@python.org"}
]
maintainers = [
  {name = "Georg Brandl", email = "georg@python.org"},
  {name = "Matthäus G. Chajdas"},
  {name = "Jean Abou Samra", email = "jean@abou-samra.fr"},
]
description = "Pygments is a syntax highlighting package written in Python."
# For PyPI, use a shorter description than README.rst.
readme = {file = "description.rst", content-type = "text/x-rst"}
keywords = ["syntax highlighting"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
]

[project.optional-dependencies]
plugins = ["importlib-metadata;python_version<'3.8'"]
windows-terminal = ["colorama >= 0.4.6"]

[project.urls]
Homepage = "https://pygments.org"
Documentation = "https://pygments.org/docs"
Source = "https://github.com/pygments/pygments"
"Bug Tracker" = "https://github.com/pygments/pygments/issues"
Changelog = "https://github.com/pygments/pygments/blob/master/CHANGES"

[project.scripts]
pygmentize = "pygments.cmdline:main"

[tool.hatch.build]
packages = ["pygments"]

[tool.hatch.version]
path = "pygments/__init__.py"

[tool.ruff]
extend-exclude = [
    # Some Python tests are purposefully invalid, others are Python 2 code.
    "tests/snippets",
    "tests/examplefiles",
     # FIXME: port these to Python 3
    "scripts/get_vimkw.py",
    "scripts/vim2pygments.py",
]
