[metadata]
name = Pygments
version = attr: pygments.__version__
url = https://pygments.org/
license = BSD License
author = Georg Brandl
author_email = georg@python.org
description = Pygments is a syntax highlighting package written in Python.
long_description =
    Pygments
    ~~~~~~~~

    Pygments is a syntax highlighting package written in Python.

    It is a generic syntax highlighter suitable for use in code hosting, forums,
    wikis or other applications that need to prettify source code.  Highlights
    are:

    * a wide range of over 500 languages and other text formats is supported
    * special attention is paid to details, increasing quality by a fair amount
    * support for new languages and formats are added easily
    * a number of output formats, presently HTML, LaTeX, RTF, SVG, all image
      formats that PIL supports and ANSI sequences
    * it is usable as a command-line tool and as a library

    :copyright: Copyright 2006-2020 by the Pygments team, see AUTHORS.
    :license: BSD, see LICENSE for details.
platforms = any
keywords = syntax highlighting
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.5

[options.packages.find]
include =
    pygments
    pygments.*

[options.entry_points]
console_scripts =
    pygmentize = pygments.cmdline:main

[egg_info]
tag_build = dev
tag_date = true

[aliases]
release = egg_info -Db ''
upload = upload --sign --identity=36580288
